Add asset classes