@@ -1,7 +1,10 @@
 package com.assetmanager.app.view.html;
 
+import com.assetmanager.app.model.entity.Asset;
+import com.assetmanager.app.model.entity.computer.Computer;
 import org.apache.commons.lang3.StringUtils;
 
+import javax.inject.Inject;
 import java.io.Serializable;
 import java.lang.reflect.Field;
 import java.lang.reflect.InvocationTargetException;
@@ -12,6 +15,8 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
+
+import static com.assetmanager.app.view.html.AssetCardRender.renderAssetCards;
 
 
 public class HtmlComponent implements Serializable {
@@ -27,9 +32,13 @@ public class HtmlComponent implements Serializable {
 
         StringBuilder stringBuilder = new StringBuilder()
                 .append("<div class=\"row justify-content-center\">\n")
-                .append("<div class=\"col-md-11 mr-0\">\n")
-                .append("<div class=\"btn-toolbar\"><a href=\"" + htmlTableLabel.addUrl() + "\"><button class=\"btn btn-primary rounded-2\">Add " + htmlTableLabel.label() + "</button></a></div>\n")
-                .append("<div class=\"\">\n")
+                .append("<div class=\"col-md-11 mr-0\">\n");
+           //     .append("<div class=\"btn-toolbar\"><a href=\"" + htmlTableLabel.addUrl() + "\"><button class=\"btn btn-primary rounded-2\">Add " + htmlTableLabel.label() + "</button></a></div>\n");
+
+        if (Asset.class.equals(dataClass)) {
+            stringBuilder.append(renderAssetCards());
+        }
+        stringBuilder.append("<div class=\"\">\n")
                 .append("<div style=\"max-height: 60vh; overflow: auto;\">\n")
                 .append("<table class=\" table table-bordered border-4 table-striped table-responsive-sm \">\n")
                 .append("<thead class=\"table-success\">\n")
@@ -117,12 +126,16 @@ public class HtmlComponent implements Serializable {
                 " <div class=\"asset-container mx-auto\" style=\"\">\n" +
                 " <form method=" + htmlForm.httpMethod() +
                 " action= " + htmlForm.url() + " ");
+       // I need the form to have the inputs horizontal. The form is becoming too long
+
         htmlFormBuilder.append("class=\" data-form border border-4\">\n" +
                 " <h4 class=\"text-center mb-0 mt-0\">" +
                 "Create New " + htmlForm.label() + "</h4>");
+        htmlFormBuilder.append("<div class=\"form-row\">");
 
         try {
-            List<Field> fields = List.of(t.getDeclaredFields());
+            List<Field> fields = new ArrayList<>(Arrays.asList(t.getSuperclass().getDeclaredFields()));
+            fields.addAll(Arrays.asList(t.getDeclaredFields()));
             for (Field field : fields) {
                 if (!field.isAnnotationPresent(HtmlFormField.class))
                     continue;
@@ -138,7 +151,7 @@ public class HtmlComponent implements Serializable {
                     type = "number";
                 }
                 if (field.getType().isEnum()) {
-                    htmlFormBuilder.append("<div class=\"mb-1 mt-0 p-2\">\n" +
+                    htmlFormBuilder.append("<div class=\"col mb-1 mt-0 p-2\">\n" +
                                     " <label for=\" " + fieldName + "\" class=\"form-label\">" + label + "</label>\n")
                             .append("<select class=\"form-select form-select-sm\" id=\"" + fieldName + "\" name=\"" + fieldName + "\">\n");
 
@@ -152,7 +165,7 @@ public class HtmlComponent implements Serializable {
                     continue;
                 }
 
-                htmlFormBuilder.append("<div class=\"mb-1 mt-0 p-2\">\n" +
+                htmlFormBuilder.append("<div class=\" col mb-1 mt-0 p-2\">\n" +
                                 " <label for=\" " + fieldName + "\" class=\"form-label\">" + label + "</label>\n")
                         .append(htmlFormField.isRequired() ? "<span style=\"color:black;\">*</span> " : "")
                         .append(" <input type=\"" + type + "\"").append(htmlFormField.isRequired() ? "required" : "")
@@ -167,6 +180,7 @@ public class HtmlComponent implements Serializable {
                             <button class="btn btn-primary" type="submit">Create """)
                 .append(htmlForm.label()).append("""
                                     </button>
+                                </div>
                                 </div>
                             </form>
                         </div> </div>
